- Fixed bug of floating container going out of viewport.

--- a/src/assets/styles/basics/base.css
+++ b/src/assets/styles/basics/base.css
@@ -163,9 +163,11 @@ button {
     background-color: var(--text-with-highlight)
 }
 
-#portal-root {
+/* #portal-root {
     position: fixed;
-    top: 0;
+    inset: 0;
     z-index: var(--zIndex-toolTip);
-    /* very high layer for overlays */
 }
+#portal-root:empty {
+  pointer-events: none;
+} */
